# Itau-Unibanco-Desafio-de-Programacao

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
DesafioItau/: bruno.json  create transaccao.bru  get estatistica.bru  get transacoes.bru
bruno_requests/: create transaccao.bru  delete transacoes.bru  get estatisticas.bru
src/: main.rs
src/application/: estatistica_service.rs  mod.rs  transacao_service.rs
src/application/dto/: estatistica_dto.rs  mod.rs  transacao_dto.rs
src/domain/: transacao.rs
src/infrastructure/: error.rs
src/infrastructure/db/: mod.rs  transacao_repo.rs
src/infrastructure/http/: routes.rs
src/infrastructure/http/handlers/: estatistica_handler.rs  mod.rs  transacao_handler.rs
