[package]
name = "itau-desafio-programacao"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
rust_decimal = { version = "1.37.2", features = ["serde"] }
serde = "1.0.219"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
